[metadata]
name = connexion_auth_paths_extd
description = Small connexion extension to add authentication into spec routes
author = Geraldo Castro
author_email = victormatheuscastro@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/exageraldo/connexion-auth-paths-extd
project_urls =
    Bug Tracker = https://github.com/exageraldo/connexion-auth-paths-extd/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
package_dir = = src
packages =
    connexion.extended
# Dependencies are in setup.py for GitHub's dependency graph.
